...
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/img_detail_movie"/>

    <TextView
        android:id="@+id/tv_detmov_value_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_detail_name"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
...
